@@ -1,18 +1,19 @@
 package com.evotek.storage.infrastructure.domainrepository;
 
-import com.evotek.storage.infrastructure.persistence.mapper.EntityMapper;
-import jakarta.transaction.Transactional;
-import org.springframework.data.jpa.repository.JpaRepository;
-
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
+import jakarta.transaction.Transactional;
+
+import org.springframework.data.jpa.repository.JpaRepository;
+
+import com.evotek.storage.infrastructure.persistence.mapper.EntityMapper;
 
 public abstract class AbstractDomainRepository<D, E, ID> implements DomainRepository<D, ID> {
     protected final JpaRepository<E, ID> repository;
     protected final EntityMapper<D, E> entityMapper;
 
-    public AbstractDomainRepository(JpaRepository<E, ID> repository, EntityMapper<D, E> entityMapper) {
+    protected AbstractDomainRepository(JpaRepository<E, ID> repository, EntityMapper<D, E> entityMapper) {
         this.repository = repository;
         this.entityMapper = entityMapper;
     }
@@ -33,15 +34,15 @@ public abstract class AbstractDomainRepository<D, E, ID> implements DomainReposi
     @Override
     public List<D> findAllByIds(List<ID> ids) {
         return this.repository.findAllById(ids).stream()
-                        .map(this.entityMapper::toDomainModel)
-                        .collect(Collectors.toList());
+                .map(this.entityMapper::toDomainModel)
+                .toList();
     }
 
     @Override
     @Transactional
     public List<D> saveAll(List<D> domains) {
         List<E> entities = this.entityMapper.toEntityList(domains);
-        entities =this.repository.saveAll(entities);
+        entities = this.repository.saveAll(entities);
         return this.entityMapper.toDomainModelList(entities);
     }
 }
